# toy-book-search

./: .gitignore  README.md  build.gradle.kts  compose.yml  settings.gradle.kts
docker/opensearch/: Dockerfile
docs/: phase-3-indexing.md  roadmap.md
docs/mappings/: README.md  books-v1.json
scripts/: .env.example  README.md  pyproject.toml
scripts/src/book_seeder/: cli.py  config.py  indexer.py  schema.py
scripts/src/book_seeder/clients/: aladin.py  kakao.py
scripts/src/book_seeder/collectors/: seed.py
scripts/src/book_seeder/generators/: faker.py
src/main/kotlin/com/kiekk/toybooksearch/: ToybooksearchApplication.kt
src/main/resources/: application.yml
src/test/kotlin/com/kiekk/toybooksearch/: ToybooksearchApplicationTests.kt
