[project]
name = "book-seeder"
version = "0.1.0"
description = "toy-book-search 데이터 수집·증식 스크립트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "faker>=25.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "tqdm>=4.66",
    "rich>=13.7",
    "opensearch-py>=2.5",
]

[project.scripts]
book-seeder = "book_seeder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_seeder"]
